updated documentations and restructured code

--- a/rec_sys/collborative_filtering/col_filter.ipynb
+++ b/rec_sys/collborative_filtering/col_filter.ipynb
@@ -18,16 +18,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from scipy.sparse import csr_matrix\n",
-    "from scipy.stats import pearsonr\n",
     "from scipy.sparse.linalg import svds\n",
     "\n",
-    "from surprise import KNNWithMeans\n",
-    "from surprise import Dataset\n",
-    "from surprise import accuracy\n",
-    "from surprise import Reader\n",
+    "from surprise import KNNWithMeans, Dataset, accuracy, Reader\n",
     "from surprise.model_selection import train_test_split"
    ]
   },
@@ -305,7 +300,7 @@
     }
    ],
    "source": [
-    "%time pred_df = generate_prediction_df(mat, pt_df, 2999)"
+    "%time pred_df = generate_prediction_df(mat, pt_df, 10)"
    ]
   },
   {
