--- a/rec_sys/hybrid/hybrid.ipynb
+++ b/rec_sys/hybrid/hybrid.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "id": "dd29a8a2-8369-4d73-bded-ccf8f8b9a29b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from surprise import SVD, Reader, Dataset\n",
+    "from surprise import SVD, Reader, Dataset, accuracy\n",
     "from surprise.model_selection import train_test_split"
    ]
   },
@@ -200,14 +200,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d002ecd-dc49-4611-81fc-86f3cdc42809",
+   "id": "2aa30427-7793-44bc-af2c-20c78fdab629",
    "metadata": {},
    "source": [
-    "## Flow\n",
-    "1. Take in a book_id and user_id as input\n",
-    "2. Use a content-based model to compute the 50 most similar books\n",
-    "3. Compute the predicted ratings that the user might give these 50 books using a collaborative filter\n",
-    "4. Return the top n books with the highest predicted rating"
+    "## Content Based"
    ]
   },
   {
@@ -241,29 +237,17 @@
    ],
    "source": [
     "%%time\n",
-    "#Compute the cosine similarity matrix using the dummy ratings matrix\n",
-    "cosine_sim = cosine_similarity(rmat, rmat)"
+    "#Compute the cosine similarity matrix \n",
+    "cosine_sim = cosine_similarity(rmat, rmat)\n",
+    "cosine_sim = pd.DataFrame(cosine_sim, index=rmat.index, columns=rmat.index)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "e1b64468-f520-41ea-ae15-7f5923ffab51",
+   "cell_type": "markdown",
+   "id": "53695272-f22b-4d38-be4b-ebe83109676d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 29.3 ms, sys: 11.3 ms, total: 40.6 ms\n",
-      "Wall time: 7.4 ms\n"
-     ]
-    }
-   ],
    "source": [
-    "%%time\n",
-    "#Convert into pandas dataframe\n",
-    "cosine_sim = pd.DataFrame(cosine_sim, index=rmat.index, columns=rmat.index)"
+    "## Collaborative Filtering"
    ]
   },
   {
@@ -273,9 +257,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Build the SVD based Collaborative filter\n",
     "reader = Reader()\n",
-    "data = Dataset.load_from_df(df[['reader_id', 'book_id', 'book_rating']], reader)\n"
+    "data = Dataset.load_from_df(df[['reader_id', 'book_id', 'book_rating']], reader)"
    ]
   },
   {
@@ -285,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Splitting the dataset\n",
+    "# split data into train test\n",
     "trainset, testset = train_test_split(data, test_size=0.3,random_state=10)"
    ]
   },
@@ -307,8 +290,57 @@
     }
    ],
    "source": [
+    "# train\n",
     "svd = SVD()\n",
     "svd.fit(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "b65fc7b6-3cdd-495c-a90c-6dafd6b7efee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run the trained model against the testset\n",
+    "test_pred = svd.test(testset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "8d0a48d1-c03f-4520-ac29-9edf60c33fbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 2.9300\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.9299770991365213"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get RMSE\n",
+    "accuracy.rmse(test_pred, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "678850e8-51cd-4e9d-bbb8-bd74184da8e0",
+   "metadata": {},
+   "source": [
+    "## Hybrid"
    ]
   },
   {
@@ -318,35 +350,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hybrid(reader_id, book_id, n_recs):\n",
-    "    sim_scores = list(enumerate(cosine_sim[int(book_id)]))\n",
+    "def hybrid(reader_id, book_id, n_recs, df, cosine_sim, svd_model = svd):\n",
+    "    '''\n",
+    "    This function represents a hybrid recommendation system, it will have the following flow:\n",
+    "        1. Use a content-based model (cosine_similarity) to compute the 50 most similar books\n",
+    "        2. Compute the predicted ratings that the user might give these 50 books using a collaborative\n",
+    "           filtering model (SVD)\n",
+    "        3. Return the top n books with the highest predicted rating\n",
+    "        \n",
+    "    params:\n",
+    "        reader_id (Integer) : The reader_id \n",
+    "        book_id (Integer) : The book_id \n",
+    "        n_recs (Integer) : The number of recommendations you want\n",
+    "        df (DataFrame) : Original dataframe with all book information \n",
+    "        cosine_sim (DataFrame) : The cosine similarity dataframe\n",
+    "        svd_model (Model) : SVD model\n",
+    "    '''\n",
     "    \n",
-    "    #Sort the (index, score) tuples in decreasing order of similarity scores\n",
-    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+    "    # sort similarity values in decreasing order and take top 50 results\n",
+    "    sim = list(enumerate(cosine_sim[int(book_id)]))\n",
+    "    sim = sorted(sim, key=lambda x: x[1], reverse=True)\n",
+    "    sim = sim[1:50]\n",
     "    \n",
-    "    #Select the top 50 tuples, excluding the first \n",
-    "    #(as it is the similarity score of the movie with itself)\n",
-    "    sim_scores = sim_scores[1:50]\n",
+    "    # get book metadata\n",
+    "    book_idx = [i[0] for i in sim]\n",
+    "    books = df.iloc[book_idx][['book_id', 'book_rating', 'num_pages', 'publish_year', 'book_price', 'reader_id']]\n",
     "    \n",
-    "    #Store the cosine_sim indices of the top 25 movies in a list\n",
-    "    book_indices = [i[0] for i in sim_scores]\n",
-    "\n",
-    "    #Extract the metadata of the aforementioned movies\n",
-    "    books = df.iloc[book_indices][['book_id', 'book_rating', 'num_pages', 'publish_year', 'book_price', 'reader_id']]\n",
+    "    # predict using the svd_model\n",
+    "    books['est'] = books.apply(lambda x: svd_model.predict(reader_id, x['book_id'], x['book_rating']).est, axis = 1)\n",
     "    \n",
-    "    #Compute the predicted ratings using the SVD filter\n",
-    "    books['est'] = books.apply(lambda x: svd.predict(reader_id, x['book_id'], x['book_rating']).est, axis = 1)\n",
-    "    \n",
-    "    #Sort the movies in decreasing order of predicted rating\n",
+    "    # sort predictions in decreasing order and return top n_recs\n",
     "    books = books.sort_values('est', ascending=False)\n",
-    "    \n",
-    "    #Return the top 10 movies as recommendations\n",
     "    return books.head(n_recs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "id": "fb8939c8-ce0a-404a-8298-623f249705ac",
    "metadata": {},
    "outputs": [
@@ -382,43 +422,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8806</th>\n",
-       "      <td>2488</td>\n",
-       "      <td>7</td>\n",
-       "      <td>637</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>198</td>\n",
-       "      <td>4411</td>\n",
+       "      <th>24451</th>\n",
+       "      <td>2306</td>\n",
+       "      <td>5</td>\n",
+       "      <td>276</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>67</td>\n",
+       "      <td>8187</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8292</th>\n",
-       "      <td>502</td>\n",
-       "      <td>9</td>\n",
-       "      <td>298</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>81</td>\n",
-       "      <td>27627</td>\n",
+       "      <th>28108</th>\n",
+       "      <td>2419</td>\n",
+       "      <td>2</td>\n",
+       "      <td>548</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>126</td>\n",
+       "      <td>5865</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23621</th>\n",
-       "      <td>1184</td>\n",
-       "      <td>7</td>\n",
-       "      <td>403</td>\n",
+       "      <th>10646</th>\n",
+       "      <td>2328</td>\n",
+       "      <td>8</td>\n",
+       "      <td>594</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>12</td>\n",
+       "      <td>22890</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13206</th>\n",
+       "      <td>829</td>\n",
+       "      <td>3</td>\n",
+       "      <td>96</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>195</td>\n",
+       "      <td>8629</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20887</th>\n",
+       "      <td>2880</td>\n",
+       "      <td>8</td>\n",
+       "      <td>83</td>\n",
        "      <td>2013</td>\n",
-       "      <td>88</td>\n",
-       "      <td>16860</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16789</th>\n",
-       "      <td>2293</td>\n",
-       "      <td>7</td>\n",
-       "      <td>573</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>166</td>\n",
-       "      <td>9000</td>\n",
+       "      <td>82</td>\n",
+       "      <td>28214</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -427,25 +477,27 @@
       ],
       "text/plain": [
        "       book_id  book_rating  num_pages  publish_year  book_price  reader_id  \\\n",
-       "8806      2488            7        637          2001         198       4411   \n",
-       "8292       502            9        298          2019          81      27627   \n",
-       "23621     1184            7        403          2013          88      16860   \n",
-       "16789     2293            7        573          2021         166       9000   \n",
+       "24451     2306            5        276          2011          67       8187   \n",
+       "28108     2419            2        548          2011         126       5865   \n",
+       "10646     2328            8        594          2002          12      22890   \n",
+       "13206      829            3         96          2004         195       8629   \n",
+       "20887     2880            8         83          2013          82      28214   \n",
        "\n",
        "       est  \n",
-       "8806   5.0  \n",
-       "8292   5.0  \n",
-       "23621  5.0  \n",
-       "16789  5.0  "
+       "24451  5.0  \n",
+       "28108  5.0  \n",
+       "10646  5.0  \n",
+       "13206  5.0  \n",
+       "20887  5.0  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hybrid(25433,2324,4)"
+    "hybrid(234,4539,5)"
    ]
   },
   {
