updated skeleton of n2v implementation

--- a/n2v/n2v.ipynb
+++ b/n2v/n2v.ipynb
@@ -20,39 +20,38 @@
     "\"\"\"\n",
     "\n",
     "import networkx as nx\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a0606521-fdf4-4ada-8097-04b03491a7c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
+    "\n",
     "from node2vec import Node2Vec as n2v"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6d797e86-4b4a-4642-85b4-d2b28c4bb302",
+   "cell_type": "markdown",
+   "id": "521bfe85-16ba-40c5-867e-fb9e1a944e9c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Constants\n",
-    "DIMENSIONS = 2    # node2vec dimensions\n",
-    "WORKERS = 4       # node2vec workers\n",
-    "NUM_WALKS = 10    # node2vec num_walks\n",
-    "WINDOW = 1        # node2vec fit window\n",
-    "MIN_COUNT = 1     # node2vec min count\n",
-    "WALK_LENGTH = 10  # node2vec walk_length\n",
-    "BATCH_WORDS = 4   # node2vec batch words"
+    "## Generate Data"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f26cdeef-29be-49bf-87aa-baf2d70ceaaa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80c8744d-f40b-4212-8044-bd8171ef134d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "e74b0aa0-f7bb-42b5-9373-d55b02d09407",
+   "id": "2e965d36-b309-46ec-a80e-7b807bec9fdd",
    "metadata": {},
    "source": [
     "## Create Graph"
@@ -60,47 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "dd0a4dea-a863-4f7e-b899-98e5ef000d41",
+   "execution_count": null,
+   "id": "b0b07141-d45c-48f4-9d3b-4d0c0973b909",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "g = nx.wheel_graph(5000)"
-   ]
+   "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "3b683097-6cee-4191-9a2e-1cc65131fc80",
+   "cell_type": "markdown",
+   "id": "28a00881-ab1c-4d27-8296-2d3d664b3b6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: \n",
-      "Type: Graph\n",
-      "Number of nodes: 5000\n",
-      "Number of edges: 9998\n",
-      "Average degree:   3.9992\n"
-     ]
-    }
-   ],
    "source": [
-    "print(nx.info(g))"
+    "## Node2Vec"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0ec2b029-4da8-43dc-a143-ff7bb26c46a5",
-   "metadata": {},
-   "source": [
-    "### Node2Vec"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3dd63c8d-7e2f-44f8-9be0-f7cb53a64c8d",
+   "id": "4bbfe2e0-e003-40f0-8186-f8cd9b91071b",
    "metadata": {},
    "source": [
     "**Parameter Info**  \n",
@@ -116,93 +91,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "1a3d6b87-4daa-4e8e-80df-ea093937a714",
+   "execution_count": null,
+   "id": "e54268ea-f39a-440e-a863-faf4780d534d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def n2v_model(graph, dimensions, walk_length, num_walks, workers, window, min_count, batch_words):\n",
-    "    \n",
-    "    '''\n",
-    "    The purpose of this function is to embed a network using the node2vec algorithm.\n",
-    "    '''\n",
-    "    \n",
-    "    node2vec = n2v(graph,\n",
-    "                   dimensions = dimensions,\n",
-    "                   walk_length = walk_length,\n",
-    "                   num_walks = num_walks,\n",
-    "                   workers = workers)\n",
-    "    \n",
-    "    # any parameters acceptable by gensim.Word2Vec can be passed\n",
-    "    # 'dimensions' and 'workers' are automatically passed from the node2vec constructor\n",
-    "\n",
-    "    # embed nodes\n",
-    "    model = node2vec.fit(window=window,\n",
-    "                         min_count=min_count,\n",
-    "                         batch_words=batch_words)\n",
-    "    \n",
-    "    return model"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "f754e74a-0b46-4c01-927a-da56191cf344",
+   "execution_count": null,
+   "id": "17361535-ff24-4479-8c02-32e3eeccf550",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85489ec4156648b0ab1a86b990f8b6c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Computing transition probabilities:   0%|          | 0/5000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "model = n2v_model(\n",
-    "    g,\n",
-    "    dimensions=DIMENSIONS,\n",
-    "    walk_length=WALK_LENGTH,\n",
-    "    num_walks=NUM_WALKS,\n",
-    "    workers=WORKERS,\n",
-    "    window=WINDOW,\n",
-    "    min_count=MIN_COUNT,\n",
-    "    batch_words=BATCH_WORDS\n",
-    ")\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "384414f7-fde3-4944-beb4-bf5bb49e0021",
+   "cell_type": "markdown",
+   "id": "bed245ac-7e5e-4cae-a680-d54dd7fc85ae",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<gensim.models.word2vec.Word2Vec at 0x7f8603d3a6a0>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "model"
+    "## Convert to DataFrame"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25ec2ee5-3185-4802-90b1-3ecc2ec86e1e",
+   "id": "eb8b6ab1-5809-425d-baec-bd3a15403b06",
    "metadata": {},
    "outputs": [],
    "source": []
