created structure for w2v file

--- a/w2v/w2v.ipynb
+++ b/w2v/w2v.ipynb
@@ -10,8 +10,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f66dd140-80f3-49a7-9099-3ba6ec11cfc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from gensim.models import Word2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c292421-ce37-4ba1-add2-a09803337437",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79651cf6-5760-4f94-b74d-211ae0ae98f8",
+   "metadata": {},
+   "source": [
+    "## Document Similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3636ee4f-aaed-4ba2-a8bd-a14bb50b2cbd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -19,7 +52,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c292421-ce37-4ba1-add2-a09803337437",
+   "id": "94ca0bda-fd92-480a-b40b-cf5c04df1462",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d357cc6-4dfe-4e69-8379-973b199bb9a4",
+   "metadata": {},
+   "source": [
+    "## Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccf6c215-a9f9-4ba6-b334-9a07c13afa3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd00882c-5e59-4d23-8b61-ac4481b9bb8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c3d7127-d1be-4052-8851-2e42282c829f",
+   "metadata": {},
+   "source": [
+    "## Topic Modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c754c4b5-f95a-4b4a-bf50-705ad24584a7",
    "metadata": {},
    "outputs": [],
    "source": []
