--- a/w2v/w2v.ipynb
+++ b/w2v/w2v.ipynb
@@ -28,10 +28,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c292421-ce37-4ba1-add2-a09803337437",
+   "id": "6e31c509-6029-44d6-80d7-24224784967d",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dec47f99-83d0-438f-8ec9-10d787bcd21e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60651c80-0038-4aa6-a729-bb9460f0c362",
+   "metadata": {},
+   "source": [
+    "https://towardsdatascience.com/a-word2vec-implementation-using-numpy-and-python-d256cf0e5f28"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,20 +58,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3636ee4f-aaed-4ba2-a8bd-a14bb50b2cbd",
+   "cell_type": "markdown",
+   "id": "1d541be2-2d7a-4e63-aa5f-6bf61f562b91",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://stackoverflow.com/questions/45869881/finding-similarity-between-2-sentences-using-word2vec-of-sentence-with-python"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94ca0bda-fd92-480a-b40b-cf5c04df1462",
+   "cell_type": "markdown",
+   "id": "dd0ea6b0-d374-4eec-a539-bf2717b7f5ea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://stackoverflow.com/questions/41623174/using-word2vec-to-calculate-sentence-similarity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73ebb674-cd74-4d44-aeb1-88d0ac6fce61",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/65852710/text-similarity-using-word2vec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01c9929a-170f-433b-b2da-293c07f38338",
+   "metadata": {},
+   "source": [
+    "https://towardsdatascience.com/how-to-compute-sentence-similarity-using-bert-and-word2vec-ab0663a5d64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04416e0d-cf07-4b06-8ad9-888bcc1da10b",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/22129943/how-to-calculate-the-sentence-similarity-using-word2vec-model-of-gensim-with-pyt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,12 +106,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccf6c215-a9f9-4ba6-b334-9a07c13afa3b",
+   "cell_type": "markdown",
+   "id": "8dedb618-9f34-4b60-9c0c-c99d75f30407",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://medium.com/swlh/sentiment-classification-using-word-embeddings-word2vec-aedf28fbb8ca"
+   ]
   },
   {
    "cell_type": "code",
