created initial data preprocessing of w2v pipeline

--- a/w2v/w2v.ipynb
+++ b/w2v/w2v.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "import nltk\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -27,8 +27,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6e31c509-6029-44d6-80d7-24224784967d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constants\n",
+    "PATH = 'data/shakespeare.txt'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ab0b85c-e610-4f09-a47a-2894b066ebde",
+   "metadata": {},
+   "source": [
+    "## Import Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6a99a535-b628-4d93-ae16-6d1c49ae3a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 16.2 ms, sys: 4.12 ms, total: 20.3 ms\n",
+      "Wall time: 20.7 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "lines = []\n",
+    "with open(PATH, 'r') as f:\n",
+    "    for l in f:\n",
+    "        lines.append(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7e68fe5-6ef0-4446-8376-af84a4c5dc22",
+   "metadata": {},
+   "source": [
+    "## Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2f9258fe-02b7-431b-9a3b-d9861de8f6ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = [line.rstrip('\\n') for line in lines]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b1be426-83aa-429b-81a9-403d1c8fd3ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc83c045-0e9a-4bb0-bbba-41caccef420b",
    "metadata": {},
    "outputs": [],
    "source": []
