preprocesses shakesspeare data

--- a/w2v/w2v.ipynb
+++ b/w2v/w2v.ipynb
@@ -18,10 +18,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import nltk\n",
+    "import string\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import classification_report\n",
+    "from nltk.corpus import stopwords\n",
     "from gensim.models import Word2Vec"
    ]
   },
@@ -33,7 +32,8 @@
    "outputs": [],
    "source": [
     "# constants\n",
-    "PATH = 'data/shakespeare.txt'"
+    "PATH = 'data/shakespeare.txt'\n",
+    "sw = stopwords.words('english')"
    ]
   },
   {
@@ -54,8 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16.2 ms, sys: 4.12 ms, total: 20.3 ms\n",
-      "Wall time: 20.7 ms\n"
+      "CPU times: user 36.9 ms, sys: 9.79 ms, total: 46.6 ms\n",
+      "Wall time: 47.6 ms\n"
      ]
     }
    ],
@@ -82,13 +82,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines = [line.rstrip('\\n') for line in lines]"
+    "# remove new lines\n",
+    "lines = [line.rstrip('\\n') for line in lines]\n",
+    "\n",
+    "# make all characters lower\n",
+    "lines = [line.lower() for line in lines]\n",
+    "\n",
+    "# remove punctuations from each line\n",
+    "lines = [line.translate(str.maketrans('', '', string.punctuation)) for line in lines]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b1be426-83aa-429b-81a9-403d1c8fd3ee",
+   "id": "6952eb1e-cb2f-4e7f-a6b3-d1d5864eadc1",
    "metadata": {},
    "outputs": [],
    "source": []
