--- a/w2v/w2v.ipynb
+++ b/w2v/w2v.ipynb
@@ -21,7 +21,7 @@
     "import string\n",
     "\n",
     "from nltk.corpus import stopwords\n",
-    "from gensim.models import Word2Vec"
+    "from gensim.models import Word2Vec as w2v"
    ]
   },
   {
@@ -54,8 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 36.9 ms, sys: 9.79 ms, total: 46.6 ms\n",
-      "Wall time: 47.6 ms\n"
+      "CPU times: user 31.7 ms, sys: 8.48 ms, total: 40.2 ms\n",
+      "Wall time: 40.4 ms\n"
      ]
     }
    ],
@@ -94,16 +94,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6952eb1e-cb2f-4e7f-a6b3-d1d5864eadc1",
+   "execution_count": 5,
+   "id": "04f71412-8933-4e00-a095-5d7d05ebdbfe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_stopwords(lines, sw = sw):\n",
+    "    '''\n",
+    "    The purpose of this function is to remove stopwords from a given array of \n",
+    "    lines.\n",
+    "    \n",
+    "    params:\n",
+    "        lines (Array / List) : The list of lines you want to remove the stopwords from\n",
+    "        sw (Set) : The set of stopwords you want to remove\n",
+    "        \n",
+    "    example:\n",
+    "        lines = remove_stopwords(lines = lines, sw = sw)\n",
+    "    '''\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cc83c045-0e9a-4bb0-bbba-41caccef420b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 15 s, sys: 72.3 ms, total: 15 s\n",
+      "Wall time: 5.25 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "w = w2v(\n",
+    "    lines,\n",
+    "    min_count=3,   # Ignore words that appear less than this\n",
+    "    sg = 1,        # skipgrams\n",
+    "    window=7       # Context window for words during training\n",
+    ")       "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc83c045-0e9a-4bb0-bbba-41caccef420b",
+   "id": "1f83cafe-d0d0-446c-9d65-22fc9160c321",
    "metadata": {},
    "outputs": [],
    "source": []
