added documentation & changed layout of notebook

--- a/w2v/w2v.ipynb
+++ b/w2v/w2v.ipynb
@@ -98,6 +98,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f140c260-83a2-48e0-bfc8-199f0f570330",
+   "metadata": {},
+   "source": [
+    "Source : https://stackoverflow.com/questions/54929726/word2vec-vocab-results-in-just-letters-and-symbols  \n",
+    "\n",
+    "As the tutorial and the documentation for Word2Vec class suggests the constructor of the class requires list of lists of words as the first parameter (or iterator of iterators of words in general):\n",
+    "\n",
+    "sentences (iterable of iterables, optional) – The sentences iterable can be simply a list of lists of tokens, but for larger corpora,...\n",
+    "\n",
+    "I believe before feeding in sentences into Word2Vec you need to use words_tokenize on each of the sentences changing the crucial line to:\n",
+    "\n",
+    "sentences = [nltk.word_tokenize(sent) for sent in nltk.sent_tokenize(text)]\n",
+    "TL;DR\n",
+    "\n",
+    "You get letters as your \"words\" because Word2Vec treats strings corresponding to sentences as iterables containing words. Iterating over strings results in the sequence of letters. These letters are used as the basis for the model learning (instead of intended words).\n",
+    "\n",
+    "As the ancient saying goes: trash in - trash out."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "e581937e-8683-4572-9057-f4508da5708c",
@@ -114,6 +135,20 @@
    ],
    "source": [
     "%time lines = [nltk.word_tokenize(sent) for sent in lines]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dd1e6cf-5c3a-44bb-bb95-cb2b9a50e428",
+   "metadata": {},
+   "source": [
+    "**Note**  \n",
+    "\n",
+    "Be aware that the stopwords removed from these lines are of modern vocabulary. The application & data has a high importance to the type of preprocessing tactics necessary for cleaning of words.   \n",
+    "\n",
+    "In our scenario, words like \"you\" or \"yourself\" would be present in the stopwords and eliminated from the lines, however since this is shakesperes text data, these types of words would not be used. Instead \"thou\" or \"thyself\" might be useful to remove. Stay keen to these types of minature changes because they make a drastic difference in the performance of a good model versus a poor one.   \n",
+    "\n",
+    "For the purposes of this example, I won't be going into extreme details in identifying stopwords from a different centuary, but be aware that you should. "
    ]
   },
   {
@@ -138,27 +173,6 @@
     "    \n",
     "    pass\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "03dae6ca-7254-4206-8916-38920132f6b6",
-   "metadata": {},
-   "source": [
-    "Source : https://stackoverflow.com/questions/54929726/word2vec-vocab-results-in-just-letters-and-symbols  \n",
-    "\n",
-    "As the tutorial and the documentation for Word2Vec class suggests the constructor of the class requires list of lists of words as the first parameter (or iterator of iterators of words in general):\n",
-    "\n",
-    "sentences (iterable of iterables, optional) – The sentences iterable can be simply a list of lists of tokens, but for larger corpora,...\n",
-    "\n",
-    "I believe before feeding in sentences into Word2Vec you need to use words_tokenize on each of the sentences changing the crucial line to:\n",
-    "\n",
-    "sentences = [nltk.word_tokenize(sent) for sent in nltk.sent_tokenize(text)]\n",
-    "TL;DR\n",
-    "\n",
-    "You get letters as your \"words\" because Word2Vec treats strings corresponding to sentences as iterables containing words. Iterating over strings results in the sequence of letters. These letters are used as the basis for the model learning (instead of intended words).\n",
-    "\n",
-    "As the ancient saying goes: trash in - trash out."
    ]
   },
   {
