--- a/w2v/w2v.ipynb
+++ b/w2v/w2v.ipynb
@@ -38,7 +38,8 @@
     "PATH = 'data/shakespeare.txt'\n",
     "sw = stopwords.words('english')\n",
     "plt.style.use('ggplot')\n",
-    "# nltk.download('punkt')"
+    "# nltk.download('punkt')\n",
+    "# nltk.download('stopwords')"
    ]
   },
   {
