imported data set

--- a/dimensionality_reduction/tsne/tsne.ipynb
+++ b/dimensionality_reduction/tsne/tsne.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# constants\n",
-    "PATH = '../data/csv/'"
+    "PATH = '../data/all_seasons.csv'"
    ]
   },
   {
